wip(jdk-only): snapshot-iterator write-through, Function.identity drop
native-collections: Arrays$ArrayItr had no remove(), so the throwing
Iterator.remove default ran inside MXBeanSupport.findMXBeanInterface's
'while candidates.size() > 1' reduce loop. A snapshot-only remove would have
turned that into a livelock, so the fix writes through to the backing set via
a GC-rooted side table wired into all four collector hooks -- root scan,
post-move remap, per-owner retention, and the recycled-identity path.

The narrow registration was tested and rejected: the constant-pool entry is
InterfaceMethod java/util/Iterator.remove and the force-native sites key on the
declaring class, so an Arrays$ArrayItr registration would never be consulted.
Breadth is contained in the native instead -- unhandled receivers fall through
to real bytecode under a method_exists guard that walks superclasses but not
interfaces, which is exactly the needed discrimination.

registry: drop Function.identity / UnaryOperator.identity in real-JDK mode so
java.base's own indy runs and the VM spins a real $$Lambda. Dropping by
class+method covers both factory copies at once -- dropping instance methods
while one factory survived is the 2026-07-14 d8092acb regression.

cargo check -p cratonvm-native-api and -p cratonvm-native-collections both
clean, --all-targets.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>